--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> Mi primera página con GitHub Pages </h1>
+<h1> Mi primera página con GitHub desde el celular </h1>
 <p>¡Gracias GitHub!</p>
 </html>
